--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -151,22 +151,22 @@
 							-->
 							
                         </div>
-						<!--
+						
                         <div class="row">
                             <div class="col-xl-6">
                                 <div class="card mb-4">
-                                    <div class="card-header"><i class="fas fa-chart-area mr-1"></i>Area Chart Example</div>
-                                    <div class="card-body"><canvas id="myAreaChart" width="100%" height="40"></canvas></div>
+                                    <div class="card-header"><i class="fas fa-chart-area mr-1"></i>Total World Cases</div>
+                                    <div class="card-body"><canvas id="worldChart" width="100%" height="40"></canvas></div>
                                 </div>
                             </div>
                             <div class="col-xl-6">
                                 <div class="card mb-4">
-                                    <div class="card-header"><i class="fas fa-chart-bar mr-1"></i>Bar Chart Example</div>
-                                    <div class="card-body"><canvas id="myBarChart" width="100%" height="40"></canvas></div>
+                                    <div class="card-header"><i class="fas fa-chart-bar mr-1"></i>Total India Cases</div>
+                                    <div class="card-body"><canvas id="indiaChart" width="100%" height="40"></canvas></div>
                                 </div>
                             </div>
                         </div>
-						-->
+						
                         <div class="card mb-4">
                             <div class="card-header"><i class="fas fa-table mr-1"></i>Cornona Virus Stats</div>
                             <div class="card-body">
@@ -224,8 +224,8 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
         <script src="../js/scripts.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
-        <script src="../assets/demo/chart-area-demo.js"></script>
-        <script src="../assets/demo/chart-bar-demo.js"></script>
+        <script src="../assets/demo/chart-pie-world.js"></script>
+        <script src="../assets/demo/chart-pie-india.js"></script>
         <script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js" crossorigin="anonymous"></script>
         <script src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js" crossorigin="anonymous"></script>
         <script src="../assets/demo/datatables-demo.js"></script>
